# Modelling

./: .gitignore  CHANGELOG.md  COACH_ANNUAL_RESPONSE.md  CODE_REVIEW_RESPONSE.md  README.md  TASKS.md  conftest.py  pyproject.toml
docs/: bus_charging_next_steps.md  coach_annual_next_steps.md
mobility/: __init__.py
mobility/bus/: __init__.py  annual_simulation.py  block_inference.py  block_instances.py  build_all_blocks.py  calendar.py  chain_resolver.py  chain_soc.py  charger_registry.py  data_loader.py  depot_registry.py  distance.py  event_ledger.py  feasibility.py  gtfs_parser.py  run_sim_all.py  selection.py  sim_adapter.py  trip_chain_bus.py  txc_parser.py  vehicle_assignment.py  vehicle_inventory.py  vehicle_sampling.py  (+1 more)
notebooks/: 00_single_car_simulation.ipynb  01_data_exploration.ipynb  01_single_bus_simulation.ipynb  02_fleet_simulation.ipynb  02_single_coach_simulation.ipynb  03_bus_annual_simulation.ipynb  03_bus_annual_walkthrough.ipynb  03_bus_mobility.ipynb  04_coach_annual_simulation.ipynb  04_coach_txc_to_trip_table.ipynb  _build_00_modelling_narrative.py  _build_01_bus_narrative.py  _build_02_coach_narrative.py  _build_03_bus_annual_narrative.py  _build_04_coach_annual_narrative.py
outputs/: bus_annual_load_profile.dryrun.parquet  bus_annual_load_profile.parquet  bus_annual_per_block.dryrun.parquet
scripts/: compare_legacy_blocks.py  merge_privatecar_station_curve_shards.py  run_bus_annual.py  run_bus_feasibility_audit.py  run_bus_pipeline.py  run_coach_annual_pipeline.py  run_coach_pipeline.py  run_privatecar_charging_curves.py
(+144 files in other folders)
